--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Test</string>
+    <string-array name="film">
+        <item>3</item>
+        <item>223</item>
+        <item>sample1</item>
+        <item>sampl2</item>
+        <item>check1</item>
+        <item>anyval</item>
+        <item>gosling</item>
+        <item>macc</item>
+    </string-array>
+    <string-array name="director">
+        <item>993</item>
+        <item>3</item>
+        <item>5sample1</item>
+        <item>6sampl2</item>
+        <item>7check1</item>
+        <item>5anyval</item>
+        <item>8gosling</item>
+        <item>9macc</item>
+    </string-array>
 </resources>
